1998-07-31  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* rglclock.1: Update .TH.

	* Makefile.am (man_MANS): Add rglclock.1.
	(EXTRA_DIST): Add ${man_MANS}.

	* rglclock.1: New file.

1998-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (clean): #ifdef out unref'ing toplevel.

	* module.cc (HAND_ADC): New const.
	(HAND_SC): New const.
	(HAND_SR): New const.
	(draw_clock): Use them.

1998-07-23  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (glclock): Add an exception handler.

1998-07-19  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Updated.

1998-07-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc: Move toplevel out of main.
	(main): Remove local toplevel.

1998-07-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc: Test HAVE_SYS_TIME_H for sys/time.h.

	* module.cc (draw_clock): Reduce the number of rings.

	* configure.in: Add check for sys/time.h.  Add AC_HEADER_TIME.

	* glclock.cc (update): Compensate rotation speed using
	gettimeofday.

1998-07-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (rglclock_LDFLAGS): Removed.
	* configure.in: Remove AM_PROG_LIBTOOL.

	* NEWS: Updated.

	* module.cc (draw_clock): Draw a mark at the top of the dial.
	(rotate): Correct rotation.

	* configure.in: Check unistd.h and gettimeofday.

	* module.cc (draw_clock): Use glXXXf functions instead of glXXXd.

1998-07-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc: Update the FSF address.
	* glclock.h: Likewise.
	* main.cc: Likewise.
	* module.cc: Likewise.
	(draw_clock): Draw the back of the dial.

	* module.h: Likewise.

	* README: Add license information.

1998-07-11  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Updated.

	* TODO: Updated.

	* glclock.h (class glclock): Remove member tm and add t.
	(class glclock): Update the definition.  Reorder data members.
	* glclock.cc (glclock): Set the new member.
	(update): Update and use the new member.